ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: application-ingress
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/group.name: webapplication
      alb.ingress.kubernetes.io/group.order: '1'
spec:
    ingressClassName:  alb
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 80
